Fixes #3512: do not print warning if dynamic attach is explicitly enabled. Add information in readme.